# janus_linux_vulkan_vipor

./: CMakeLists.txt  README.md  build.sh
.github/Workflows/: Android-build.yml
shaders/: sha256t.comp
src/: main.cpp  sha256.cpp  sha_utils.cpp  sha_utils.hpp  stratum.cpp  stratum.hpp  verus_wrapper.cpp  vk_compute.cpp  vk_compute.hpp
